2002-04-10  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't set X paths if no X found. Only set
	/usr/local paths for freebsd

	* Source/gsc/GSContext.m: Remove currentgstate, gstate
	* Source/x11/XGServerWindow.m (windowbacking:) Implement.

2002-04-06  Adam Fedor  <fedor@gnu.org>

	* configure.in: Renable XIM by default again.

	* Source/gsc/GSStreamContext.m (GSSetFont:): Implement.
	Fix up show methods and fix spaces in method names.

	* Source/xlib/XGContext.m (-initWithContextInfo:): Return
	alternate (PS) context when indicated.

	* Source/xlib/xrtools.c: Simplify color conversion routines.
	* Source/xlib/XGGState.m: Use them
	
2002-04-03  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile.preamble: Fix LIB_DIRS and
	LIBRARIES_DEPEND_UPON for compiling as a library.

2002-04-02  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-GSDefineGState): Use new def - also
	creates a copy of the gstate.
	(-GSReplaceGState): Replace with copy of current gstate.

	* configure.in (--with-name): Configure the name of the backend
	* back.make.in: Idem.
	* config.make.in: Idem.
	* Source/GNUmakefile: Idem.
	* Documentation/install.texi: Document.

	* Source/GNUmakefile.preamble: Missing include.

	* Source/x11/XGServerWindow.m: Fix slideImage method name.

2002-04-01  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -_setupRootWindow]): Read
	GSAppOwnsMiniwindow default.
	([XGServer -appOwnsMiniwindow]): Use it.
	([XGServer -miniwindow:): Idem.

	* Source/gsc/GSContext.m (-GSSendBezierPath:): Implement
	(-GSRectClipList::): Likewise.
	(-GSRectFillList::): Likewise.
	(-GSCurrentCTM): Likewise.
	(-GSSetCTM:): Likewise.
	(-GSConcatCTM:): Likewise.
	* Source/xlib/XGGState.m ([XGGState -DPSsetmiterlimit:]): Implement
	to do nothing.

	* Source/x11/GNUmakefile: Remove unsed draw.c, gradient.c, misc.c

2002-03-31  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m
	In [window:::] set the initial hints for a window, as