@@ -1,3 +1,8 @@
+2002-04-11  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* Tools/gpbs.m: Fixed bug in argument parsing ... was objecting to
+	-NSHost!
+
 2002-04-10  Adam Fedor  <fedor@gnu.org>
 
 	* configure.in: Don't set X paths if no X found. Only set
